dodanie endpointu edytującego właściciela apteki i dodanie pierwszej wersji endpointu dodającego nową aptekę (działa konwersja adresu na długość i szerokość geograficzną)
